--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./style.css">
   <title>Relogio Digital</title>
 </head>
 <body>
-  
+  <div class="container">
+    <div class="clock">
+      <span class="hours">00 :</span>
+      <span class="minutes">00 :</span>
+      <span class="seconds">00</span>
+    </div>
+  </div>
 </body>
 </html>
